# raytracer

./: .gitignore  Application.cpp  CMakeLists.txt  README.md
src/: Image.cpp  Image.h  Light.h  Material.h  RenderAction.h  Renderer.cpp  Renderer.h
src/Parser/: ArgParser.cpp  ArgParser.h  Args.h  SceneParser.cpp  SceneParser.h
src/Shapes/: Shape.h  Sphere.h
